implemented tle refreshing feature, modulate xyz conversion